# adjango-template

./: .env  pyproject.toml
src/apps/core/controllers/: base.py
src/apps/core/migrations/: 0001_initial.py
src/apps/core/models/: user.py
src/apps/core/routes/: api.py  root.py
src/apps/core/services/user/: base.py
src/config/: asgi.py  settings.py
src/config/modules/: adjango.py  apps.py  email.py  logging.py  middleware.py  net.py  redis.py  silk.py  storage.py
src/utils/: common.py  daterange.py  pictures.py
